--- a/index.html
+++ b/index.html
@@ -3,34 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Daniel Puerto - Portfolio</title>
+    <title>Mi Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Perfil Profesional -->
     <header>
-        <h1>Hola, soy Daniel Puerto</h1>
-        <p>Desarrollador Web Junior</p>
+        <h1>Daniel Puerto Soto</h1>
+        <p>Desarrollador de Aplicaciones Web junior, recién titulado, con experiencia práctica en backend y frontend. Dominio de tecnologías como .NET, SQL, JavaScript, HTML, CSS, PHP y Java. Persona comprometida, resolutiva, comunicativa, con experiencia en equipos ágiles. Apasionado por la tecnología y el aprendizaje continuo.</p>
     </header>
 
+    <!-- Sección de Contacto -->
     <section>
-        <h2>Sobre Mí</h2>
-        <p>Soy un apasionado de la tecnología, siempre buscando aprender y mejorar mis habilidades. Me especializo en desarrollo de aplicaciones web utilizando tecnologías como .NET, JavaScript, PHP, SQL, entre otras.</p>
-    </section>
-
-    <section>
-        <h2>Habilidades</h2>
+        <h2>Contacto</h2>
         <ul>
-            <li>Lenguajes: .NET, Java, SQL, JavaScript, PHP, HTML, CSS</li>
-            <li>Frameworks: ASP.NET, Visual Studio, Eclipse</li>
-            <li>Metodologías: Scrum, Agile</li>
+            <li><strong>Teléfono:</strong> 674 137 494</li>
+            <li><strong>Correo electrónico:</strong> <a href="mailto:delpuertodaniel@hotmail.com">delpuertodaniel@hotmail.com</a></li>
+            <li><strong>Ubicación:</strong> Madrid, España</li>
         </ul>
     </section>
 
-    <footer>
-        <p>Contacta conmigo en <a href="mailto:delpuertodaniel@hotmail.com">delpuertodaniel@hotmail.com</a></p>
-    </footer>
+    <!-- Habilidades Técnicas -->
+    <section>
+        <h2>Habilidades Técnicas</h2>
+        <ul>
+            <li><strong>Lenguajes:</strong> .NET, Java, SQL, JavaScript, PHP, HTML, CSS</li>
+            <li><strong>Frameworks y Entornos:</strong> ASP.NET, Visual Studio, Eclipse</li>
+            <li><strong>Bases de Datos:</strong> SQL Server, MySQL</li>
+            <li><strong>Herramientas:</strong> Git, Jira, Postman, Microsoft 365, Linux</li>
+            <li><strong>Metodologías:</strong> Scrum, Agile</li>
+        </ul>
+    </section>
 
-    <script src="scripts.js"></script>
+    <!-- Idiomas -->
+    <section>
+        <h2>Idiomas</h2>
+        <ul>
+            <li><strong>Español:</strong> Nativo</li>
+            <li><strong>Inglés:</strong> Nivel Intermedio (B1) – Comprensión lectora y comunicación básica</li>
+        </ul>
+    </section>
+
+    <!-- Experiencia Laboral -->
+    <section>
+        <h2>Experiencia Laboral</h2>
+        <h3>Plexus Tech – Prácticas como Desarrollador Web (2023 – 2024)</h3>
+        <ul>
+            <li>Desarrollo backend con .NET y SQL Server.</li>
+            <li>Trabajo en equipos ágiles con metodología Scrum.</li>
+            <li>Mejora de rendimiento y resolución de incidencias.</li>
+            <li>Uso de herramientas: Jira, Postman, Git, Visual Studio.</li>
+        </ul>
+        <h3>Salomon (Amer Sports Spain) – Sales Assistant & Training Champion (2021 – 2025)</h3>
+        <ul>
+            <li>Atención al cliente, gestión de caja y control de stock.</li>
+            <li>Formación de nuevos empleados.</li>
+        </ul>
+    </section>
+
+    <!-- Formación Académica -->
+    <section>
+        <h2>Formación Académica</h2>
+        <ul>
+            <li><strong>Técnico Superior en Desarrollo de Aplicaciones Web</strong> – IES Leonardo Da Vinci (2021 – 2023)</li>
+            <li><strong>Grado en Magisterio de Educación Primaria – Mención en Educación Física</strong> – UCM (2014 – 2020)</li>
+        </ul>
+    </section>
+
+    <!-- Formación Complementaria -->
+    <section>
+        <h2>Formación Complementaria</h2>
+        <ul>
+            <li><strong>Inteligencia Artificial y Productividad</strong> – Google + Santander Open Academy (2025)</li>
+            <li><strong>Introducción a Python</strong> – Santander Open Academy (2025)</li>
+            <li><strong>Power BI</strong> – Santander Open Academy (2025)</li>
+        </ul>
+    </section>
+
+    <!-- Botón de Contacto por Email -->
+    <div class="contacto">
+        <button id="emailButton" class="btn">Contactar por Email</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
